tests/pass/LOR.java
public class LOR {
    public static void main(String[] args) {
        boolean x = true;
        boolean y = false;
        x = y || x;
    }
}
