tests/fail/ExceptionHandlingFail.java
package fail;
public class ExceptionHandlingFail {
    public static void main(String[] args)  {
        try{
            int x = 1/0;
        }
    }
}
